--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,19 @@
 resolver = "2"
 
 members = [
-    "libcompiler",
-    "libmovevm",
-    "crates/compiler",
-    "crates/gas",
-    "crates/natives",
-    "crates/vm",
-    "crates/types",
-    "crates/storage",
-    "crates/e2e-move-tests",
-    "tools/generate-bcs-go",
-    "tools/precompile",
+	# "libcompiler",
+	"librevm",
+	"crates/interpreter",
+	"crates/precompile",
+	"crates/primitives",
+	"crates/revm",
+	"crates/vm",
+	"crates/types", "crates/storage",
+	# "crates/types",
+	# "crates/storage",
+	# "crates/e2e-move-tests",
+	# "tools/generate-bcs-go",
+	# "tools/precompile",
 ]
 
 [profile.release]
@@ -52,12 +54,12 @@ rust-version = "1.77.1"
 [workspace.dependencies]
 # Internal crate dependencies.
 # Please do not add any test features here: they should be declared by the individual crate.
-initia-move-vm = { path = "crates/vm" }
-initia-move-types = { path = "crates/types" }
-initia-move-storage = { path = "crates/storage" }
-initia-move-natives = { path = "crates/natives" }
-initia-move-gas = { path = "crates/gas" }
-initia-move-compiler = { path = "crates/compiler" }
+# initia-move-vm = { path = "crates/vm" }
+# initia-move-types = { path = "crates/types" }
+# initia-move-storage = { path = "crates/storage" }
+# initia-move-natives = { path = "crates/natives" }
+# initia-move-gas = { path = "crates/gas" }
+# initia-move-compiler = { path = "crates/compiler" }
 
 # External crate dependencies.
 # Please do not add any test features here: they should be declared by the individual crate.
@@ -75,15 +77,15 @@ hex = { version = "0.4.3", default-features = false }
 itertools = "0.10.3"
 libsecp256k1 = { version = "0.7.1" }
 log = { version = "0.4.17", features = [
-    "max_level_debug",
-    "release_max_level_warn",
+	"max_level_debug",
+	"release_max_level_warn",
 ] }
 once_cell = "1.18.0"
 rand = "0.8.5"
 rand_core = { version = "0.6", features = ["getrandom"] }
 serde = { version = "1.0.188", default-features = false, features = [
-    "derive",
-    "rc",
+	"derive",
+	"rc",
 ] }
 serde_bytes = "0.11.9"
 serde_json = { version = "1.0.94" }
@@ -115,26 +117,26 @@ triomphe = "0.1.9"
 # move-transactional-test-runner = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
 # read-write-set = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
 # read-write-set-dynamic = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-binary-format = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-bytecode-verifier = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-cli = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-command-line-common = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-compiler = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-core-types = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-docgen = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-model = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-package = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-prover = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-prover-boogie-backend = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-prover-bytecode-pipeline = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-resource-viewer = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-stackless-bytecode = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-stdlib = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-symbol-pool = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-unit-test = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-vm-runtime = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-vm-test-utils = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-move-vm-types = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-binary-format = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-bytecode-verifier = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-cli = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-command-line-common = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-compiler = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-core-types = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-docgen = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-model = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-package = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-prover = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-prover-boogie-backend = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-prover-bytecode-pipeline = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-resource-viewer = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-stackless-bytecode = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-stdlib = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-symbol-pool = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-unit-test = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-vm-runtime = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-vm-test-utils = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
+# move-vm-types = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
 
 # END MOVE DEPENDENCIES
 
