--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -15,3 +15,5 @@ bytes = { workspace = true }
 clru = { workspace = true }
 parking_lot = { workspace = true }
 sha3 = { workspace = true }
+
+types = { path = "../types" }
