--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -12,4 +12,5 @@ rust-version.workspace = true
 # revm
 revm-interpreter = { path = "../interpreter", version = "10.0.1", default-features = false }
 revm = { path = "../revm", version = "14.0.1", default-features = false }
+types = { path = "../types" }
 revm-precompile = { path = "../precompile", version = "11.0.1", default-features = false }
