--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -43,6 +43,7 @@ log = { workspace = true, features = [
 # revm
 vm = { path = "../crates/vm" }
 types = { path = "../crates/types" }
+storage = { path = "../crates/storage" }
 
 revm-interpreter = { path = "../crates/interpreter", version = "10.0.1", default-features = false }
 revm-primitives = { path = "../crates/primitives", version = "9.0.1", default-features = false }
