--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -39,6 +39,7 @@ log = { workspace = true, features = [
 	"max_level_debug",
 	"release_max_level_warn",
 ] }
+k256 = { version = "0.13.3", features = ["ecdsa"] }
 
 # revm
 vm = { path = "../crates/vm" }
@@ -49,6 +50,7 @@ revm-interpreter = { path = "../crates/interpreter", version = "10.0.1", default
 revm-primitives = { path = "../crates/primitives", version = "9.0.1", default-features = false }
 revm = { path = "../crates/revm", version = "14.0.1", default-features = false }
 revm-precompile = { path = "../crates/precompile", version = "11.0.1", default-features = false }
+rlp = "0.6.1"
 
 [build-dependencies]
 cbindgen = { workspace = true }
