--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -52,5 +52,10 @@ revm = { path = "../crates/revm", version = "14.0.1", default-features = false }
 revm-precompile = { path = "../crates/precompile", version = "11.0.1", default-features = false }
 rlp = "0.6.1"
 
+alloy-eips = { version = "0.3", default-features = false, features = ["k256"] }
+alloy-primitives = { version = "0.8.2", default-features = false, features = [
+	"rlp",
+] }
+
 [build-dependencies]
 cbindgen = { workspace = true }
