chore: remove unused file and code

--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -2,9 +2,8 @@
 name = "librevm"
 version = "0.1.0"
 publish = false
-description = "Initia Move VM Engine"
-homepage = "https://initia.xyz/"
-repository = "https://github.com/initia-labs/movevm"
+description = "Reth Revm Engine"
+repository = "https://github.com/rethermint/revm-api"
 exclude = [".gitignore"]
 
 edition = { workspace = true }
