--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -29,7 +29,7 @@ backtraces = []
 bytes = { workspace = true }
 serde = { workspace = true, features = ["derive", "alloc"] }
 serde_json = { workspace = true }
-types = { path = "../crates/types" }
+thiserror= { workspace = true }
 revm-primitives = { path = "../crates/primitives", version = "9.0.1", default-features = false }
 revm = { path = "../crates/revm", version = "14.0.1", default-features = false }
 alloy-primitives = { version = "0.8.2", default-features = false, features = [
