--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,19 +2,11 @@
 resolver = "2"
 
 members = [
-	# "libcompiler",
 	"librevm",
 	"crates/interpreter",
 	"crates/precompile",
 	"crates/primitives",
 	"crates/revm",
-	"crates/vm",
-	"crates/types", "crates/storage",
-	# "crates/types",
-	# "crates/storage",
-	# "crates/e2e-move-tests",
-	# "tools/generate-bcs-go",
-	# "tools/precompile",
 ]
 
 [profile.release]
@@ -34,6 +26,7 @@ debug = true
 [profile.dev]
 debug = true
 
+
 # use release settings to reduce memory pressure in the linking step in CI
 [profile.ci]
 inherits = "test"
@@ -47,24 +40,16 @@ version = "0.1.0"
 edition = "2021"
 license = "BUSL-1.1"
 license-file = "LICENSE"
-homepage = "https://initia.xyz"
-repository = "https://github.com/initia-labs/movevm"
+repository = "https://github.com/rethmint/revm-api"
 rust-version = "1.77.1"
 
 [workspace.dependencies]
-# Internal crate dependencies.
-# Please do not add any test features here: they should be declared by the individual crate.
-# initia-move-vm = { path = "crates/vm" }
-# initia-move-types = { path = "crates/types" }
-# initia-move-storage = { path = "crates/storage" }
-# initia-move-natives = { path = "crates/natives" }
-# initia-move-gas = { path = "crates/gas" }
-# initia-move-compiler = { path = "crates/compiler" }
+bytes = "1.4.0"
+thiserror = "1.0.34"
 
 # External crate dependencies.
 # Please do not add any test features here: they should be declared by the individual crate.
 anyhow = "1.0.41"
-bcs = "0.1.5"
 better_any = "0.1.1"
 clru = "0.6"
 cbindgen = "0.26.0"
@@ -96,68 +81,11 @@ sha3 = "0.10.6"
 smallvec = "1.6.1"
 tempfile = "3.2.0"
 serial_test = "1.0.0"
-thiserror = "1.0.34"
 tsu = "1.0.1"
-bytes = "1.4.0"
 parking_lot = "0.12.1"
 base64 = "0.21.7"
 bigdecimal = "0.4"
 bech32 = "0.11"
 triomphe = "0.1.9"
 
-# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
-# BEGIN MOVE DEPENDENCIES
 
-# move-abigen = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-bytecode-utils = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-errmapgen = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-ir-compiler = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-prover-test-utils = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-stackless-bytecode-interpreter = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-transactional-test-runner = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# read-write-set = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# read-write-set-dynamic = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-binary-format = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-bytecode-verifier = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-cli = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-command-line-common = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-compiler = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-core-types = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-docgen = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-model = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-package = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-prover = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-prover-boogie-backend = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-prover-bytecode-pipeline = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-resource-viewer = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-stackless-bytecode = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-stdlib = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-symbol-pool = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-unit-test = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-vm-runtime = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-vm-test-utils = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-# move-vm-types = { git = "https://github.com/initia-labs/move.git", rev = "bc9faed56ed45aceacec4a21a57e63b3bef1126f" }
-
-# END MOVE DEPENDENCIES
-
-# FOR LOCAL DEVELOPMENNT
-# move-binary-format = { path = "../move/move-binary-format" }
-# move-bytecode-verifier = { path = "../move/move-bytecode-verifier" }
-# move-cli = { path = "../move/tools/move-cli" }
-# move-command-line-common = { path = "../move/move-command-line-common" }
-# move-compiler = { path = "../move/move-compiler" }
-# move-core-types = { path = "../move/move-core/types" }
-# move-docgen = { path = "../move/move-prover/move-docgen" }
-# move-model = { path = "../move/move-model" }
-# move-package = { path = "../move/tools/move-package" }
-# move-prover = { path = "../move/move-prover" }
-# move-prover-boogie-backend = { path = "../move/move-prover/boogie-backend" }
-# move-prover-bytecode-pipeline = { path = "../move/move-prover/bytecode-pipeline" }
-# move-resource-viewer = { path = "../move/tools/move-resource-viewer" }
-# move-stackless-bytecode = { path = "../move/move-model/bytecode" }
-# move-stdlib = { path = "../move/move-stdlib" }
-# move-symbol-pool = { path = "../move/move-symbol-pool" }
-# move-unit-test = { path = "../move/tools/move-unit-test" }
-# move-vm-runtime = { path = "../move/move-vm/runtime" }
-# move-vm-test-utils = { path = "../move/move-vm/test-utils" }
-# move-vm-types = { path = "../move/move-vm/types" }
