--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -3,7 +3,7 @@ name = "librevm"
 version = "0.1.0"
 publish = false
 description = "Reth Revm Engine"
-repository = "https://github.com/rethermint/revm-api"
+repository = "https://github.com/rethmint/revm-api"
 exclude = [".gitignore"]
 
 edition = { workspace = true }
@@ -26,33 +26,12 @@ serde = []
 backtraces = []
 
 [dependencies]
-anyhow = { workspace = true }
 bytes = { workspace = true }
-bcs = { workspace = true }
-errno = { workspace = true }
-hex = { workspace = true }
 serde = { workspace = true, features = ["derive", "alloc"] }
-serde_bytes = { workspace = true }
 serde_json = { workspace = true }
-thiserror = { workspace = true }
-log = { workspace = true, features = [
-	"max_level_debug",
-	"release_max_level_warn",
-] }
-k256 = { version = "0.13.3", features = ["ecdsa"] }
-
-# revm
-vm = { path = "../crates/vm" }
-types = { path = "../crates/types" }
-storage = { path = "../crates/storage" }
-
-revm-interpreter = { path = "../crates/interpreter", version = "10.0.1", default-features = false }
+thiserror= { workspace = true }
 revm-primitives = { path = "../crates/primitives", version = "9.0.1", default-features = false }
 revm = { path = "../crates/revm", version = "14.0.1", default-features = false }
-revm-precompile = { path = "../crates/precompile", version = "11.0.1", default-features = false }
-rlp = "0.6.1"
-
-alloy-eips = { version = "0.3", default-features = false, features = ["k256"] }
 alloy-primitives = { version = "0.8.2", default-features = false, features = [
 	"rlp",
 ] }
