--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,19 +22,19 @@ jobs:
           name: librevm-linux-glibc
           path: api/*.so
 
-  build-linux-muslc:
-    name: Linux muslc (alpine)
+  build-windows:
+    name: Windows
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - name: Build
-        run: make release-build-alpine
+        run: make release-build-windows
 
       - uses: actions/upload-artifact@v4
         with:
-          name: librevm-linux-muslc
-          path: api/*.a
+          name: librevm-window
+          path: api/*.dll
 
   build-macos:
     name: MacOS glibc
@@ -52,7 +52,7 @@ jobs:
 
   release:
     name: Release shared libraries
-    needs: [build-linux-glibc, build-linux-muslc, build-macos]
+    needs: [build-linux-glibc, build-windows, build-macos]
     runs-on: ubuntu-latest
     steps:
       - name: Get linux-glibc artifacts
@@ -60,10 +60,10 @@ jobs:
         with:
           name: librevm-linux-glibc
 
-      - name: Get linux-muslc artifacts
+      - name: Get windows artifacts
         uses: actions/download-artifact@v4
         with:
-          name: librevm-linux-muslc
+          name: librevm-windows
 
       - name: Get macos artifacts
         uses: actions/download-artifact@v4
@@ -75,5 +75,5 @@ jobs:
         with:
           files: |
             *.so
-            *.a
+            *.dll
             *.dylib
