--- a/builders/Dockerfile.debian
+++ b/builders/Dockerfile.debian
@@ -34,4 +34,4 @@ RUN mkdir /.cargo
 RUN chmod +rx /.cargo
 COPY guest/cargo-config.toml /.cargo/config.toml
 
-CMD ["/opt/build_linux.sh"]
+CMD ["bash", "-c", "echo 'Argument missing. Pass one build script (e.g. build_linux.sh) to docker run' && exit 1"]
