--- a/builders/Dockerfile.debian
+++ b/builders/Dockerfile.debian
@@ -4,7 +4,7 @@
 FROM --platform=linux/amd64 debian:11-slim
 
 RUN apt update -y \
-  && apt install -y clang gcc make gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu wget \
+  && apt install -y clang gcc make gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu wget llvm \
   && rm -rf /var/lib/apt/lists/*
 
 # GET FROM https://github.com/rust-lang/docker-rust-nightly
