--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ on:
       - "crates/**"
       - "librevm/**"
       - "Cargo.toml"
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -68,6 +71,6 @@ jobs:
       - name: Commit shared libraries
         uses: EndBug/add-and-commit@v9
         with:
-          add: '["api/librevmapi.dylib", "api/librevmapi.aarch64.so", "api/librevmapi.x86_64.so", "api/libcompiler.dylib", "api/libcompiler.aarch64.so", "api/libcompiler.x86_64.so"]'
+          add: '["api/librevmapi.dylib", "api/librevmapi.aarch64.so", "api/librevmapi.x86_64.so" ]'
           default_author: github_actions
           message: "update shared libraries"
