--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,6 @@ on:
       - "crates/**"
       - "librevm/**"
       - "Cargo.toml"
-  pull_request:
-    branches:
-      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -46,4 +43,31 @@ jobs:
           name: librevmapi-macos
           path: api/*.dylib
 
-  
+  commit:
+    name: Commit shared libraries
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }} # Build linux-muslc only on tags/releases
+    needs: [build-linux-glibc, build-macos]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PUSH_TO_PROTECTED_BRANCH }}
+      - name: Get linux-glibc artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: librevmapi-linux-glibc
+          path: api
+
+      - name: Get macos artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: librevmapi-macos
+          path: api
+
+      - name: Commit shared libraries
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: '["api/librevmapi.dylib", "api/librevmapi.aarch64.so", "api/librevmapi.x86_64.so" ]'
+          default_author: github_actions
+          message: "update shared libraries"
