--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
       - "release/*"
-    paths:
-      - "crates/**"
-      - "librevm/**"
-      - "Cargo.toml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -45,7 +41,7 @@ jobs:
 
   commit:
     name: Commit shared libraries
-    if: ${{ !startsWith(github.ref, 'refs/tags/') }} # Build linux-muslc only on tags/releases
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     needs: [build-linux-glibc, build-macos]
     runs-on: ubuntu-latest
 
