feat: polymorphic leveldb

--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -34,6 +34,7 @@ revmc = { workspace = true }
 leveldb = "0.8.6"
 tempdir = "0.3.7"
 color-eyre = "0.6"
+db-key = "0.0.5"
 
 [build-dependencies]
 cbindgen = { workspace = true }
