--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -35,6 +35,7 @@ leveldb = "0.8.6"
 tempdir = "0.3.7"
 color-eyre = "0.6"
 db-key = "0.0.5"
+tokio = { version = "1.41.1", features = ["full"] }
 
 [build-dependencies]
 cbindgen = { workspace = true }
