--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -36,6 +36,7 @@ tempdir = "0.3.7"
 color-eyre = "0.6"
 db-key = "0.0.5"
 tokio = { version = "1.41.1", features = ["full"] }
+once_cell = "1.20.2"
 
 [build-dependencies]
 cbindgen = { workspace = true }
