--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -37,6 +37,7 @@ color-eyre = "0.6"
 db-key = "0.0.5"
 tokio = { version = "1.41.1", features = ["full"] }
 once_cell = "1.20.2"
+libloading = "0.8"
 
 [build-dependencies]
 cbindgen = { workspace = true }
