fix: linking error and add contracts for benchmark

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
       - "release/*"
+    paths:
+      - "crates/**"
+      - "librevm/**"
+      - "Cargo.toml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
