--- a/benchmark/gevm/Dockerfile.gevm
+++ b/benchmark/gevm/Dockerfile.gevm
@@ -5,8 +5,11 @@ FROM golang:1.22
 WORKDIR /app
 
 # Copy the entire project directory
-COPY . /app
-
+COPY contracts /app/contracts
+COPY types /app/types
+COPY benchmark/gevm /app/benchmark/gevm
+COPY go.mod /app/
+COPY lib.go /app/
 # Download dependencies
 RUN go mod tidy
 
@@ -18,4 +21,4 @@ RUN go mod tidy
 WORKDIR /app
 
 # Run the tests and measure memory usage and speed
-CMD /usr/bin/time -v go test -v ./benchmark/gevm
+CMD /usr/bin/time -v go test -v ./benchmark/gevm -count=500
