--- a/benchmark/revmffi/Dockerfile.revmffi
+++ b/benchmark/revmffi/Dockerfile.revmffi
@@ -5,8 +5,12 @@ FROM golang:1.23
 WORKDIR /app
 
 # Copy the entire project directory
-COPY . /app
-
+COPY api /app/api
+COPY contracts /app/contracts
+COPY types /app/types
+COPY benchmark/revmffi /app/benchmark/revmffi
+COPY go.mod /app/
+COPY lib.go /app/
 # Download dependencies
 RUN go mod tidy
 
@@ -18,4 +22,4 @@ RUN go mod tidy
 WORKDIR /app
 
 # Run the tests and measure memory usage and speed
-CMD /usr/bin/time -v go test -v ./benchmark/revmffi
+CMD /usr/bin/time -v go test -v ./benchmark/revmffi -count=500
