feat: docker image for benchmark

--- a/benchmark/revmffi/Dockerfile.revmffi
+++ b/benchmark/revmffi/Dockerfile.revmffi
@@ -1,16 +1,12 @@
 # Use the official Golang image as the base image
 FROM golang:1.23
 
+RUN apt-get update && apt-get install -y time
 # Set the working directory inside the container
 WORKDIR /app
 
 # Copy the entire project directory
-COPY api /app/api
-COPY contracts /app/contracts
-COPY types /app/types
-COPY benchmark/revmffi /app/benchmark/revmffi
-COPY go.mod /app/
-COPY lib.go /app/
+COPY  . /app
 # Download dependencies
 RUN go mod tidy
 
