--- a/benchmark/Dockerfile.gevm
+++ b/benchmark/Dockerfile.gevm
@@ -1,17 +1,19 @@
 # Use the official Golang image as the base image
 FROM golang:1.22
 
+RUN apt-get update && apt-get install -y time
+
 # Set the working directory inside the container
 WORKDIR /app
 
 # Copy the entire project directory
+COPY api /app/api  
 COPY contracts /app/contracts
 COPY types /app/types
 COPY testutils /app/testutils
 COPY benchmark/contracts/erc20 /app/benchmark/contracts/erc20
 COPY benchmark/gevm /app/benchmark/gevm
-COPY go.mod /app/
-COPY lib.go /app/
+COPY go.mod lib.go /app/
 # Download dependencies
 RUN go mod tidy
 
@@ -20,7 +22,7 @@ WORKDIR /app/benchmark
 RUN go mod tidy
 
 # Set the working directory back to the root of the project
-WORKDIR /app
+WORKDIR /app/benchmark/gevm
 
 # Run the tests and measure memory usage and speed
-CMD /usr/bin/time -v go test -v ./benchmark/gevm -count=500
+CMD /usr/bin/time -v go test -v  -count=1000
