--- a/benchmark/Dockerfile.revmffi
+++ b/benchmark/Dockerfile.revmffi
@@ -1,6 +1,9 @@
 # Use the official Golang image as the base image
 FROM golang:1.23
 
+
+RUN apt-get update && apt-get install -y time
+
 # Set the working directory inside the container
 WORKDIR /app
 
@@ -11,8 +14,7 @@ COPY types /app/types
 COPY benchmark/revmffi /app/benchmark/revmffi
 COPY testutils /app/testutils
 COPY benchmark/contracts/erc20 /app/benchmark/contracts/erc20
-COPY go.mod /app/
-COPY lib.go /app/
+COPY go.mod lib.go /app/
 # Download dependencies
 RUN go mod tidy
 
@@ -21,7 +23,7 @@ WORKDIR /app/benchmark
 RUN go mod tidy
 
 # Set the working directory back to the root of the project
-WORKDIR /app
+WORKDIR /app/benchmark/revmffi
 
 # Run the tests and measure memory usage and speed
-CMD /usr/bin/time -v go test -v ./benchmark/revmffi -count=500
+CMD /usr/bin/time -v go test -v -count=1000
