--- a/benchmark/Dockerfile.gevm
+++ b/benchmark/Dockerfile.gevm
@@ -24,5 +24,4 @@ RUN go mod tidy
 # Set the working directory back to the root of the project
 WORKDIR /app/benchmark/gevm
 
-# Run the tests and measure memory usage and speed
-CMD /usr/bin/time -v go test -v  -count=1000
+CMD ["/bin/bash"]
