--- a/benchmark/Dockerfile.revmffi
+++ b/benchmark/Dockerfile.revmffi
@@ -25,5 +25,4 @@ RUN go mod tidy
 # Set the working directory back to the root of the project
 WORKDIR /app/benchmark/revmffi
 
-# Run the tests and measure memory usage and speed
-CMD /usr/bin/time -v go test -v -count=1000
+CMD ["/bin/bash"]
