--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,5 +71,5 @@ base64 = "0.21.7"
 bigdecimal = "0.4"
 bech32 = "0.11"
 triomphe = "0.1.9"
-revm = { path = "../rethmint/revm/crates/revm" }
-revmc = { path = "../revmc/crates/revmc" }
+revm = { git = "https://github.com/rethmint/revm", rev = "bed7673494036cf2bb9d8353c700c0a3f94b06b5" }
+revmc = { git = "https://github.com/rethmint/revmc", rev = "213a7541919c51786227d82a880f385f51a7eee4" }
