--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Setup and Lint
 on:
   workflow_dispatch:
   pull_request:
@@ -15,8 +15,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint:
-    name: rust lint
+  setup:
+    name: setup install rust and llvm
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -41,22 +41,20 @@ jobs:
           prefix=$(llvm-config-18 --prefix)
           echo "LLVM_SYS_180_PREFIX=$prefix" >> $GITHUB_ENV
 
-      - name: Verify LLVM Installation
-        run: |
-          echo "Using LLVM version:"
-          llvm-config-18 --version
-          echo "LLVM_SYS_180_PREFIX=$LLVM_SYS_180_PREFIX"
-
       - name: Install latest rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: 1.81.0
           override: true
           components: rustfmt, clippy
-      - uses: actions/setup-go@v4
+
+      - name: Install Go
+        uses: actions/setup-go@v4
         with:
           go-version: "1.22"
-      - uses: actions/cache@v3
+
+      - name: Cache Cargo
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/bin/
@@ -67,6 +65,13 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
           restore-keys: ${{ runner.os }}-cargo-
 
+  lint:
+    name: apply clippy
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
+      
       - name: Rustfmt
         run: |
           cargo fmt --all
