--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -35,6 +35,10 @@ tokio = { version = "1.41.1", features = ["full"] }
 once_cell = "1.20.2"
 libloading = "0.8"
 sled = "0.34.7"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-appender = "0.2.3"
+chrono = "0.4.38"
 
 [build-dependencies]
 cbindgen = { workspace = true }
