--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -39,6 +39,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-appender = "0.2.3"
 chrono = "0.4.38"
+chrono-tz = "0.10.0"
 
 [build-dependencies]
 cbindgen = { workspace = true }
