feat: aot runtime with revmc (#19)
* feat: base register handler setup

* feat: init vm with appended handler register through builder

* feat: compile method calling revmc

* feat: runtime jit struct implementation

* feat: polymorphic leveldb

* refactor: leveldb error handling

* feat: cronner leveldb field

* feat: ext context database field

* feat: base setup for async multithreading, static lifetime for cronner

* feat: cron handle as static variable

* feat: increment hash count in db

* wip: fix external context with lifetimes

* feat: multiplex key for fn and count, fix cgo error

* feat: load fn as EvmCompilerFn from db

* wip: multiplex count, label_name, bytecode database

* feat: extract const paths

* feat: cron routine

* feat: delegate join handle to Go, implement cron ffi

* wip: persist single tokio runtime entity throughout program

* feat: revert single tokio persistence, restrain starting cron job immediately

* feat: single leveldb, use prefix to multiplex between keys

* wip: migrate from leveldb to sled

* wip: migration to sled db, cgo error

* fix: multiple sled db inits in single process to single oncecell initialization

* feat: flush by default

* wip: external function call err

* wip: extern fn ffi call cgo error

* wip: multiplex create frame and call frame

* wip: compile success

* wip: cgo error fixing...

* wip: alter jit logics

* feat: bytecode from gostorage, store so in db

* wip: bytecode debug

* fix: segfault error

* clean: jit -> aot, error propagation

* clean: label using bytecode hash

* clean: sleddb path to local, not respository directory

* test: benchmark 5 call tx using runtime aot

* test: fibonacci benchmark aot

* bench: fibonacci benchmark, increase gas limit

* feat: local path cross os

* refactor: naming from cronner -> compiler

* rebase: main, maintain head

* feat: do not compile same bytecode aot twice

* feat: sep

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = [
-	"librevm",
-	"types/rust",
-]
+members = ["librevm", "types/rust"]
 
 [profile.release]
 opt-level = 3
@@ -61,6 +58,18 @@ serde = { version = "1.0.188", default-features = false, features = [
 	"rc",
 ] }
 serde_json = { version = "1.0.94" }
-
-revm = "18.0.0"
-
+serde-generate = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
+serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
+sha2 = "0.10.8"
+sha3 = "0.10.6"
+smallvec = "1.6.1"
+tempfile = "3.2.0"
+serial_test = "1.0.0"
+tsu = "1.0.1"
+parking_lot = "0.12.1"
+base64 = "0.21.7"
+bigdecimal = "0.4"
+bech32 = "0.11"
+triomphe = "0.1.9"
+revm = { git = "https://github.com/rethmint/revm", rev = "bed7673494036cf2bb9d8353c700c0a3f94b06b5" }
+revmc = { git = "https://github.com/rethmint/revmc", rev = "213a7541919c51786227d82a880f385f51a7eee4" }
