--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -28,9 +28,18 @@ thiserror = { workspace = true }
 alloy-primitives = { version = "0.8.2", default-features = false, features = [
 	"rlp",
 ] }
-# state = { workspace = true }
 revm = { workspace = true }
-
+revmc = { workspace = true }
+color-eyre = "0.6"
+tokio = { version = "1.41.1", features = ["full"] }
+once_cell = "1.20.2"
+libloading = "0.8"
+sled = "0.34.7"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-appender = "0.2.3"
+chrono = "0.4.38"
+chrono-tz = "0.10.0"
 
 [build-dependencies]
 cbindgen = { workspace = true }
