--- a/revmcd/Cargo.toml
+++ b/revmcd/Cargo.toml
@@ -12,6 +12,6 @@ rust-version.workspace = true
 
 [dependencies]
 clap = { version = "4.5.22", features = ["derive"] }
-revmffi = { path = "../librevm" }
+revmapi = { path = "../librevm" }
 revm = { workspace = true }
 revmc = { workspace = true }
