--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,9 @@ parking_lot = "0.12.1"
 base64 = "0.21.7"
 bigdecimal = "0.4"
 triomphe = "0.1.9"
-revm = { git = "https://github.com/0xEyrie/revm", rev = "bed7673494036cf2bb9d8353c700c0a3f94b06b5" }
-revmc = { git = "https://github.com/0xEyrie/revmc", rev = "213a7541919c51786227d82a880f385f51a7eee4" }
+revm = { version = "18.0", default-features = false }
+revm-primitives = { version = "14.0", default-features = false }
+revm-interpreter = { version = "14.0", default-features = false }
+revmc = { git = "https://github.com/0xEyrie/revmc", rev = "0d138b6c42ed52b735f6c8604655dc76d15b1efa" }
 prost = "0.11"
 prost-types = "0.11"
