--- a/librevm/Cargo.toml
+++ b/librevm/Cargo.toml
@@ -38,6 +38,10 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-appender = "0.2.3"
 chrono = "0.4.38"
 chrono-tz = "0.10.0"
+prost.workspace = true
+prost-types.workspace = true
+
 
 [build-dependencies]
 cbindgen = { workspace = true }
+prost-build = "0.13.4"
