feat: db commit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,8 @@ codegen-units = 16
 [workspace.package]
 version = "0.0.1"
 edition = "2021"
-authors = ["rethmint"]
-keywords = ["cosmos-sdk", "revm", "crypto"]
+authors = ["0xEyrie"]
+keywords = ["ffi", "revm", "crypto", "execute engine"]
 license = "MIT"
 license-file = "LICENSE"
 readme = "README.md"
